feat: V20 主链路全量组装 + JE/V12 路径迁移与配置接入
本次提交完成 V20 版本主链路核心组装，同时落地 JE 模组 V12 路径迁移与配置接入模块：
1. 新增 Agent 主链路模块：MainAgent/Registry、ConnectionResolver、TargetResolver、LLM 调度器
2. 实现 BatchToolDispatcher/BatchResultCollector 对接 JE tool_call_batch 协议
3. 新增 TCP 统一错误类型、聊天历史存储模块
4. 完成 JE 侧路径迁移：从 config/mcagent/ 到 Alice/ 目录
5. 实现 Fabric 指令注册与配置热加载能力
6. 修复 NapCat 启动 batch 脚本传参问题
7. 临时限制 QQ 机器人为单账号运行以解决进程冲突